[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhopper"
version = "1.3.0"
description = "Black-box hyperparameter optimization for high-dimensional search spaces"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Mathias Lechner and the PyHopper team", email = "mlech26l@gmail.com" },
]
maintainers = [
    { name = "IfaDW", email = "info@pirateninstitut.de" },
]
keywords = ["hyperparameter", "optimization", "machine-learning", "mcmc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26",
    "tqdm>=4.66",
    "psutil>=5.9",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/IfaDW/pyhopper"
Documentation = "https://pyhopper.readthedocs.io/"
Repository = "https://github.com/IfaDW/pyhopper"
Issues = "https://github.com/IfaDW/pyhopper/issues"
Upstream = "https://github.com/pyhopper/pyhopper"

[tool.hatch.build.targets.wheel]
packages = ["pyhopper"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyhopper",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
    "/pyproject.toml",
]
exclude = [
    "/pyhopper/tests",
    "/examples",
    "/offline_examples",
    "/local_examples",
    "/impl_tests",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"pyhopper/tests/*" = ["E712"]
"pyhopper/__init__.py" = ["A001"]
"pyhopper/callbacks/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["psutil.*", "tqdm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["pyhopper/tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
